Horizontal scroll fix :bug:

--- a/styles/play.css
+++ b/styles/play.css
@@ -1,6 +1,6 @@
 .play-header {
   height: 142px;
-  width: 100vw;
+  width: 100%;
   position: relative;
 }
 
